<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/buttons"
        app:iconSpaceReserved="false">

        <com.hydra.noods.BindingsPreference
            app:key="a_button"
            app:title="@string/a_button"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="0" />

        <com.hydra.noods.BindingsPreference
            app:key="b_button"
            app:title="@string/b_button"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="1" />

        <com.hydra.noods.BindingsPreference
            app:key="x_button"
            app:title="@string/x_button"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="10" />

        <com.hydra.noods.BindingsPreference
            app:key="y_button"
            app:title="@string/y_button"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="11" />

        <com.hydra.noods.BindingsPreference
            app:key="start_button"
            app:title="@string/start_button"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="3" />

        <com.hydra.noods.BindingsPreference
            app:key="select_button"
            app:title="@string/select_button"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="2" />

        <com.hydra.noods.BindingsPreference
            app:key="up_button"
            app:title="@string/up_button"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="6" />

        <com.hydra.noods.BindingsPreference
            app:key="down_button"
            app:title="@string/down_button"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="7" />

        <com.hydra.noods.BindingsPreference
            app:key="left_button"
            app:title="@string/left_button"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="5" />

        <com.hydra.noods.BindingsPreference
            app:key="right_button"
            app:title="@string/right_button"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="4" />

        <com.hydra.noods.BindingsPreference
            app:key="l_button"
            app:title="@string/l_button"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="9" />

        <com.hydra.noods.BindingsPreference
            app:key="r_button"
            app:title="@string/r_button"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="8" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/hotkeys"
        app:iconSpaceReserved="false">

        <com.hydra.noods.BindingsPreference
            app:key="fast_hold"
            app:title="@string/fast_forward_hold"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="12" />

        <com.hydra.noods.BindingsPreference
            app:key="fast_toggle"
            app:title="@string/fast_forward_toggle"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="13" />

        <com.hydra.noods.BindingsPreference
            app:key="screen_swap"
            app:title="@string/screen_swap_toggle"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            index="14" />
    </PreferenceCategory>
</PreferenceScreen>
