<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/general_settings"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="direct_boot"
            app:title="@string/direct_boot"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <ListPreference
            app:key="fps_limiter"
            app:title="@string/fps_limiter"
            app:entries="@array/fps_limiter_entries"
            app:entryValues="@array/setting_values"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <SwitchPreferenceCompat
            app:key="threaded_2d"
            app:title="@string/threaded_2d"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <ListPreference
            app:key="threaded_3d"
            app:title="@string/threaded_3d"
            app:entries="@array/threaded_3d_entries"
            app:entryValues="@array/setting_values"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <SwitchPreferenceCompat
            app:key="high_res_3d"
            app:title="@string/high_resolution_3d"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <SwitchPreferenceCompat
            app:key="mic_enable"
            app:title="@string/use_microphone"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <SwitchPreferenceCompat
            app:key="show_fps_counter"
            app:title="@string/show_fps_counter"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/screen_layout"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="screen_position"
            app:title="@string/screen_position"
            app:entries="@array/screen_position_entries"
            app:entryValues="@array/setting_values"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <ListPreference
            app:key="screen_rotation"
            app:title="@string/screen_rotation"
            app:entries="@array/screen_rotation_entries"
            app:entryValues="@array/setting_values"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <ListPreference
            app:key="screen_arrangement"
            app:title="@string/screen_arrangement"
            app:entries="@array/screen_arrangement_entries"
            app:entryValues="@array/setting_values"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <ListPreference
            app:key="screen_sizing"
            app:title="@string/screen_sizing"
            app:entries="@array/screen_sizing_entries"
            app:entryValues="@array/setting_values"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <ListPreference
            app:key="screen_gap"
            app:title="@string/screen_gap"
            app:entries="@array/screen_gap_entries"
            app:entryValues="@array/setting_values"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <ListPreference
            app:key="screen_filter"
            app:title="@string/screen_filter"
            app:entries="@array/screen_filter_entries"
            app:entryValues="@array/setting_values"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <SwitchPreferenceCompat
            app:key="integer_scale"
            app:title="@string/integer_scale"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <SwitchPreferenceCompat
            app:key="gba_crop"
            app:title="@string/gba_crop"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />

        <SwitchPreferenceCompat
            app:key="screen_ghost"
            app:title="@string/simulate_ghosting"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/on_screen_controls"
        app:iconSpaceReserved="false">

        <SeekBarPreference
            app:key="button_scale"
            app:title="@string/button_scale"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            android:max="10" />

        <SeekBarPreference
            app:key="button_spacing"
            app:title="@string/button_spacing"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            android:max="10" />

        <SeekBarPreference
            app:key="vibrate_strength"
            app:title="@string/vibration_strength"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="true"
            android:max="10" />
    </PreferenceCategory>
</PreferenceScreen>
